fix: defensively freeze nested mutable collections in PluginLogEntry metadata
The metadata field in PluginLogEntry was only performing shallow copy via
Map.copyOf(), which left nested List/Map/Set values externally mutable. This
allows callers to mutate nested collections after construction, violating the
record's immutability contract and potentially causing state corruption in
concurrent scenarios.

Added recursive freezing of nested collections to one level deep:
- Map.copyOf() for nested Map values
- List.copyOf() for nested List values
- Set.copyOf() for nested Set values
- Primitive/immutable values are returned unchanged

This prevents external mutation of nested collections while maintaining
backward compatibility and API stability.

Testing: Added three test cases validating defensive freezing of each
collection type (List, Map, Set). Existing shallow-copy tests still pass.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>